@@ -14,18 +14,22 @@ DATE xx/xx/2008
 
 NEWS:
 
+
 NEW: [features/improvements]
 +Configurable Keybindings and Keybinding editor
++New version of CodeBrowser with added support for
+ (haXe, Matlab, Octave, Scheme, System Verilog, Verilog)
 +Add highlighting support for System Verilog (w/ help from Tim Corcoran)
 +Add support for Vala
-+Improved support for (Objective C)
++Improved support for (Camle, Objective C)
++Jump to matching Brace/Bracket command (default Ctrl+Shift+B)
 +Combinded Add/Delete bookmark into single toggle action
 +Add Serbian translation (contributed by Vladimir Lazic)
 
 BUG FIXES:
-+Typo in Caml config module
 +Misc UI consistancy issues
 +Add missing Objective C sample file for highlighting editor
++Using 16x16 size toolbar icons on OSX
 
 #-----------------------------------------------------------------------------#
 
